--- a/tmux.conf
+++ b/tmux.conf
@@ -6,6 +6,10 @@ set -g default-terminal "screen-256color"
 # set shell
 set -g default-shell /bin/zsh
 
+# resize-pane
+bind-key -r C-i resize-pane -U 1
+bind-key -r C-u resize-pane -D 1
+
 ### THOUGHTBOT
 
 set -g default-terminal 'screen-256color'
