Add mouse scrolling for tmux

--- a/tmux.conf
+++ b/tmux.conf
@@ -3,6 +3,10 @@ set -g prefix C-a
 bind C-a send-prefix
 set -g default-terminal "screen-256color"
 
+# mouse scrolling
+setw -g mode-mouse on
+set-window-option -g mode-mouse on
+
 # set shell
 set -g default-shell /bin/zsh
 
