--- a/tmux.conf
+++ b/tmux.conf
@@ -4,8 +4,8 @@ bind C-a send-prefix
 set -g default-terminal "screen-256color"
 
 # mouse scrolling
-setw -g mode-mouse on
-set-window-option -g mode-mouse on
+# setw -g mode-mouse on
+ set-window-option -g mode-mouse on
 
 # set shell
 set -g default-shell /bin/zsh
