--- a/i3status.conf
+++ b/i3status.conf
@@ -20,7 +20,7 @@ general {
 #order += "ipv6"
 order += "disk /"
 order += "wireless _first_"
-order += "ethernet _first_"
+#order += "ethernet _first_"
 order += "battery all"
 order += "load"
 order += "tztime local"
@@ -30,11 +30,11 @@ wireless _first_ {
         format_down = "W: down"
 }
 
-ethernet _first_ {
-        # if you use %speed, i3status requires root privileges
-        format_up = "E: %ip (%speed)"
-        format_down = "E: down"
-}
+#ethernet _first_ {
+        ## if you use %speed, i3status requires root privileges
+        #format_up = "E: %ip (%speed)"
+        #format_down = "E: down"
+#}
 
 battery all {
         format = "%status %percentage %remaining"
