--- a/i3status.conf
+++ b/i3status.conf
@@ -7,47 +7,97 @@
 # If the above line is not correctly displayed, fix your editor first!
 
 general {
-        #output_format = "term"
-        output_format = "i3bar"
         colors = true
         interval = 5
 }
 
-#ipv6 {
-#
-#}
-
-#order += "ipv6"
-order += "disk /"
+order += "ipv6"
 order += "wireless _first_"
-#order += "ethernet _first_"
+order += "ethernet _first_"
 order += "battery all"
+order += "disk /"
 order += "load"
+order += "memory"
 order += "tztime local"
 
 wireless _first_ {
-        format_up = "W: (%quality at %essid) %ip"
+        #format_up = "W: (%quality at %essid) %ip"
+        format_up = "W: (%quality at) %ip"
         format_down = "W: down"
 }
 
-#ethernet _first_ {
-        ## if you use %speed, i3status requires root privileges
-        #format_up = "E: %ip (%speed)"
-        #format_down = "E: down"
-#}
+ethernet _first_ {
+        format_up = "E: %ip (%speed)"
+        format_down = "E: down"
+}
 
 battery all {
         format = "%status %percentage %remaining"
 }
 
-tztime local {
-        format = "%Y-%m-%d %H:%M:%S"
+disk "/" {
+        format = "%avail"
 }
 
 load {
         format = "%1min"
 }
 
-disk "/" {
-        format = "%avail"
+memory {
+        format = "%used | %available"
+        threshold_degraded = "1G"
+        format_degraded = "MEMORY < %available"
 }
+
+tztime local {
+        format = "%Y-%m-%d %H:%M:%S"
+}
+
+
+# Below is many-years-old config as of Oct 2022. Probably want to get rid of it
+#
+#general {
+        ##output_format = "term"
+        #output_format = "i3bar"
+        #colors = true
+        #interval = 5
+#}
+
+##ipv6 {
+##
+##}
+
+##order += "ipv6"
+#order += "disk /"
+##order += "wireless _first_"
+##order += "ethernet _first_"
+#order += "battery all"
+#order += "load"
+#order += "tztime local"
+
+#wireless _first_ {
+        #format_up = "W: (%quality at %essid) %ip"
+        #format_down = "W: down"
+#}
+
+##ethernet _first_ {
+        ### if you use %speed, i3status requires root privileges
+        ##format_up = "E: %ip (%speed)"
+        ##format_down = "E: down"
+##}
+
+#battery all {
+        #format = "%status %percentage %remaining"
+#}
+
+#tztime local {
+        #format = "%Y-%m-%d %H:%M:%S"
+#}
+
+#load {
+        #format = "%1min"
+#}
+
+#disk "/" {
+        #format = "%avail"
+#}
